# slam-services-revenue-tracker

./: .editorconfig  .gitignore  .kilocode  CONSTITUTION.md  Export-KiloCode-Output  Project Runtime User Stories.txt  Project-Structure-Report.txt  README.md  SLAM Services - Digital Transformation Blueprint.md  Section14_Phase25_Feedback.md  Spike-Plan-Microsoft-Document-Intelligence-PnL.md  Spike-Report-Computer-Vision-Check-Leg-20260527.md  pyproject.toml  requirements.txt  run_local.ps1  startup.sh
.azure/: config
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.grok/: AGENT.md
App/: app.py  app_logging.py  azure_content_understanding.py  azure_di_utils.py  azure_document_intelligence.py  bank_statements.py  bank_statements_tabular.py  check_cropper_v5.py  data_paths.py  db_utils.py  diagnostics.py  hybrid_cv_check_leg.py  local_enhanced_ocr.py
QMS/: ISO9001-Clause-Mapping.md  README.md  Risk-Register.md
Scripts/: Analyze-GateA3Results.ps1  Codespace-Connection-Recipe.md  Launch-GateA3Orchestration.ps1  Onboarding-for-Laura-Codespaces.md  Process-Statement.ps1  aci_migrate_runner.py  bank-statement-parser.py  dump_easyocr_lines.py  dump_pipeline_ocr_lines.py  e2e_local_ocr.py  generate_revenue_data.py  health_check.py  init_db.py  migrate_to_postgres.py  reorganize_cropped_checks.py  setup-codespace-auth.sh  test_azure_assembly.py  (+2 more)
tools/dual-agent/: .env.example  .gitignore  PROJECT_STATUS.md  QUICKSTART.md  README.md  pyproject.toml  test_bridge.py
tools/dual-agent/dual_agent/: __init__.py  __main__.py  cli.py  config.py  cursor_client.py  grok_client.py  orchestrator.py  session.py
tools/dual-agent/examples/: tasks.md
tools/dual-agent/examples/templates/: azure-di-hybrid-integration.md  large-scale-cleanup.md  ocr-pipeline-robustness.md  payee-extractor-hardening.md  spike-to-production-refactor.md
tools/dual-agent/scripts/: activate.ps1  install-global.ps1  setup-uv.ps1  setup.ps1
(+162 files in other folders)
