[project]
name = "dual-agent"
version = "0.1.0"
description = "Autonomous feedback loop between Grok (headless) and Cursor agents using the official Cursor SDK"
readme = "README.md"
requires-python = ">=3.10"  # Relaxed for Cursor SDK bridge compatibility on Windows (bridge has issues with 3.14)
license = {text = "MIT"}
authors = [
  {name = "SLAM Services Team"}
]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "cursor-sdk>=0.1.0",  # Official Cursor Python SDK
]

[project.scripts]
dual-agent = "dual_agent.cli:app"

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
